# Compiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Compiler  CompilerTests  CompilerTests.cbp  Makefile  README.md  Tests.cbp  cmake_install.cmake  compile_commands.json  run-compiler.sh  run-tests.sh
math_testes/: formal_simple_language.rb  informal_simple_program.rb  language_description.rb
math_testes/sintatic/: a.out  definition.c  syntatic-transitions.c  syntatic-transitions.h  syntatic.c
src/: lexical-transitions.c  lexical.c  main.c  semantic.c  text-manipulator.c  text-manipulator.h
src/Lexical/: lexical-transitions.c  lexical-transitions.h  lexical.c  lexical.h
tests/: lexical-transitions.tests.c  lexical.tests.c  text-manipulator.tests.c
